# recoverable-robust-single-machine-scheduling

./: assignment_results.txt  general_ws_results.txt  instances10.txt  instances20.txt  matching_results.txt  matching_ws_results.txt  maxmin_results.txt  pyproject.toml  sorting_results.txt
code/: assignment.py  general.py  matching.py  maxmin.py  minmax.py  sorting.py
instances/: instances15.txt
results/: assignment_ws_results.txt  general_results.txt  minmax_results.txt
results-processing/: read_results.py
results/aggregate_by_Delta/: assignment_aggregate_results.csv  assignment_ws_aggregate_results.csv  general_aggregate_results.csv  general_ws_aggregate_results.csv  matching_aggregate_results.csv  matching_ws_aggregate_results.csv
results/aggregate_by_Gamma/: assignment_aggregate_results.csv  assignment_ws_aggregate_results.csv  general_aggregate_results.csv  general_ws_aggregate_results.csv  matching_aggregate_results.csv  matching_ws_aggregate_results.csv
z-constraint-comparison/: comparison.py  with_additional_constraints.csv  without_additional_constraints.csv
