[tool.poetry]
name = "rrsms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.3"
pylint = "^2.16.1"
isort = "^5.12.0"
matplotlib = "^3.6.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
ortools = "^9.6.2534"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
